Fix link color in dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -482,3 +482,6 @@ ol {
 .markdown a {
   color: var(--ifm-color-content-secondary);
 }
+html[data-theme="dark"] .markdown a {
+  color: var(--ifm-color-primary);
+}
